sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: not found: value current
    current = getValue(i)
    ^AlgInsertionSort:9: error: not found: value j
    j = i
    ^AlgInsertionSort:10: error: not found: value j
    while(j!=0 || isSmaller(j,j-1)){
          ^AlgInsertionSort:10: error: not found: value j
    while(j!=0 || isSmaller(j,j-1)){
                            ^AlgInsertionSort:10: error: not found: value j
    while(j!=0 || isSmaller(j,j-1)){
                              ^AlgInsertionSort:11: error: not found: value j
      setValue(j, getValue(j-1))
               ^AlgInsertionSort:11: error: not found: value j
      setValue(j, getValue(j-1))
                           ^AlgInsertionSort:12: error: not found: value j
      j-=1
      ^AlgInsertionSort:14: error: not found: value j
    setValue(j, current)
             ^AlgInsertionSort:14: error: not found: value current
    setValue(j, current)
                ^